--- a/src/App.css
+++ b/src/App.css
@@ -98,64 +98,66 @@
   background-color: rgba(6, 141, 141, 0.5);
 }
 
-/* nav */
+/* RESUME */
+/* From Uiverse.io by andrew-demchenk0 */ 
 .button {
-    height: 50px;
-    width: 150px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-    transition: all 0.5s ease-in-out;
-  }
-  
-  .button:hover {
-    box-shadow: 0.5px 0.5px 150px #252525;
-  }
-  
-  .type1::after {
-    content: "Resume";
-    height: 50px;
-    width: 150px;
-    background-image: linear-gradient(to right, #062222, #33f1f1);
-    color: #fff;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    transform: translateY(50px);
-    font-size: 1.2rem;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease-in-out;
-  }
-  
-  .type1::before {
-    content: "Hire Me";
-    height: 60px;
-    width: 150px;
-    background-image: linear-gradient(to right, #0e5575, #222a6e);
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    transform: translateY(0px) scale(1.2);
-    font-size: 1.2rem;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease-in-out;
-  }
-  
-  .type1:hover::after {
-    transform: translateY(0) scale(1.2);
-  }
-  
-  .type1:hover::before {
-    transform: translateY(-50px) scale(0) rotate(120deg);
-  }
+  position: relative;
+  width: 150px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 1px solid #12d607;
+  background-color: #362184;
+  overflow: hidden;
+}
+
+.button, .button__icon, .button__text {
+  transition: all 0.3s;
+}
+
+.button .button__text {
+  transform: translateX(22px);
+  color: #fff;
+  font-weight: 600;
+}
+
+.button .button__icon {
+  position: absolute;
+  transform: translateX(109px);
+  height: 100%;
+  width: 39px;
+  background-color: #331779;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button .svg {
+  width: 20px;
+  fill: #fff;
+}
+
+.button:hover {
+  background: #0b4071;
+}
+
+.button:hover .button__text {
+  color: transparent;
+}
+
+.button:hover .button__icon {
+  width: 148px;
+  transform: translateX(0);
+}
+
+.button:active .button__icon {
+  background-color: #146c54;
+}
+
+.button:active {
+  border: 1px solid #146c54;
+}
 
   /*  navigation menu */
   .nav-link {
