--- a/src/App.css
+++ b/src/App.css
@@ -238,29 +238,39 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  border: 2px solid var(--green);
   border-radius: var(--border-radius);
   transition: var(--transition);
+  
 }
 
 .wrapper::before {
   top: 14px;
   left: 14px;
   background-color: var(--navy);
-  border: 2px solid var(--green);
   mix-blend-mode: screen;
+ 
 }
 
 .wrapper::after {
   border: 2px solid var(--green);
   top: 14px;
   left: 14px;
-  z-index: -1;
+  z-index: -2;
+}
+.wrapper:hover::before,
+.wrapper:focus::before {
+  top: 16px;
+  left: 16px;
+
+ 
 }
 
 .wrapper:hover .img,
 .wrapper:focus .img {
   filter: none;
   mix-blend-mode: normal;
+  transform: scale(1.02);
 }
 
 @keyframes bounce-slow {
