--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
   white-space: nowrap;
   font-family: "Poppins", sans-serif;
 } */
+/* global.css or inside tailwind config layer */
+::-webkit-scrollbar {
+  display: none;
+}
 
 .btn-shine { 
 position: relative; 
